* Now system is package inferred and loadable has a core with minimum dependencies.
* Fixed displaying docstring for constant locative.
* Include locative was fixed for files with unicode characters
file-subseq function was rewritten.
* Locatives can be specified without a package prefix inside the defsection
because all locative symbols now live in 40ANTS-DOC/LOCATIVES package.
* Function update-asdf-system-readmes was renamed to update-asdf-system-readmes and now it generates only one README file
* Tests were rewritten to use Rove and to support (asdf:test-system :40ants-doc)