@@ -6,3 +6,4 @@ file-subseq function was rewritten.
 because all locative symbols now live in 40ANTS-DOC/LOCATIVES package.
 * Function update-asdf-system-readmes was renamed to update-asdf-system-readmes and now it generates only one README file
 * Tests were rewritten to use Rove and to support (asdf:test-system :40ants-doc)
+* Removed mgl-pax:define-package macro. An uiop:define-package can be used instead.
